   * Server now generates PR 121 compliant replay files.
   * Fix bug #21025: replay controller doesn't execute play_next_side properly
   * Fix bug #21916: ready blocked at inappropriate times
   * Fix GUI2 borders around selected elements
   * Fix bug #21931: controllers bugged in (basic campaign) when networked
   * Fix bug #21883: make sure movement animations don't cycle with fog on
 * WML engine:
   * [get_global_variable] now works properly when side != current_side.
   * Fix bug #20871: Attack related events are now mpsave.
   * Start and prestart events are now mpsave.
     (but UI things like [message][option] don't work during prestart event)
   * Invoking the rng will now always make undoing impossible.

Version 1.11.12:
 * AI:
   * Fixed a bug that made it impossible to change or delete Micro AIs after a
     game had been reloaded (bug #21750). This was a general bug in the RCA AI
     mechanism and applied to other CAs as well, but it was most visible in the
     Micro AIs.
   * Messenger Micro AI: fix rare bug in attacks by messenger
   * Patrol Micro AI: fixed bug in the attack part of this MAI
 * Campaigns:
   * The Hammer of Thursagan:
     * Fixed missing objective in 'The Court of Karrag'.
     * Rebalanced scenarios 'Invaders', Mages and Drakes' and 'Fear'.
 * C++ Engine:
   * Purge "human_ai" controller type. This is a fixup of bugfix #18829 below.
 * Language and i18n:
   * Updated translations: German, Greek, Scottish Gaelic, Slovak
 * Lua API:
   * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when
     the table returned by the user-specified function is not completely valid,
     when wesnoth is running in debug mode (--debug command line flag).
 * Units:
   * Increased the experience requirement for the Rami from 32 to 39
   * Increased the experience requirement for the Saree from 56 to 64
   * Changed sound timings for Khalifate melee attacks
   * New chill tempest animation for Lich/Ancient Lich