@@ -68,6 +68,7 @@ Version 1.11.12+dev:
    * Fix GUI2 borders around selected elements
    * Fix bug #21931: controllers bugged in (basic campaign) when networked
    * Fix bug #21883: make sure movement animations don't cycle with fog on
+   * Fix bug #21316: make subframes within standing animations cycle by default
  * WML engine:
    * [get_global_variable] now works properly when side != current_side.
    * Fix bug #20871: Attack related events are now mpsave.
